--- a/src/css/track.css
+++ b/src/css/track.css
@@ -1,94 +1,77 @@
-#track {
+:root {
   --track-fg: #D7D3CE;
   --track-fg-2: #94919E;
   --track-bg: #060639;
-  --player-button-width: 3em;
   --rounding: 5px;
   --pill: 99999999px;
   --seekbar-fg: #5c5c5c;
   --seekbar-bg: #121337;
+}
 
-
+#track {
   background-color: var(--track-bg);
   width: 25rem;
   padding: 3rem;
-  border-radius: calc(var(--rounding)*1.2);
+  border-radius: calc(var(--rounding) * 1.2);
   color: var(--track-fg);
-}
 
-#track #track-metadata p {
-  color: var(--track-fg-2);
-}
+  #track-metadata p {
+    color: var(--track-fg-2);
+  }
 
-#track #track-art {
-  width: 100%;
-  justify-content: space-evenly;
-}
+  #track-art {
+    width: 100%;
+    justify-content: space-evenly;
 
-#track img {
-  border-radius: var(--rounding);
-  aspect-ratio: 1/1;
-}
+    img {
+      border-radius: var(--rounding);
+      aspect-ratio: 1/1;
+    }
 
-#track audio {
-  margin: 2rem;
+    audio {
+      margin: 2rem;
+    }
+  }
 }
 
 #custom-seekbar {
   width: 100%;
   margin-top: 1rem;
-}
 
-#custom-seekbar>* {
-  margin: 5px;
-}
+  >* {
+    margin: 5px;
+  }
 
-#custom-seekbar span {
-  transform: translateY(3px);
-  position: relative;
-  /* Add this to make the elapsed bar absolute relative to the seekbar container */
-}
+  #seekbar {
+    appearance: none;
+    outline: none;
+    border: none;
+    width: 100%;
+    height: 5px;
+    background-color: var(--seekbar-bg);
+    background-size: 0% 100%;
+    background-image: linear-gradient(#2D3133, #2D3133);
+    background-repeat: no-repeat;
+    border-radius: var(--pill);
+    cursor: pointer;
 
-#seekbar {
-  appearance: none;
-  outline: none;
-  border: none;
+    &::-webkit-slider-thumb {
+      appearance: none;
+      opacity: 0;
+      width: 20px;
+      height: 10px;
+      border-radius: var(--pill);
+      cursor: pointer;
+      transition: all .3s linear;
+      background-color: var(--seekbar-fg);
 
-  width: 100%;
-  height: 5px;
+      &:hover {
+        background-color: var(--seekbar-fg);
+      }
+    }
 
-  background-color: var(--seekbar-bg);
-  background-size: 0% 100%;
-  background-image: linear-gradient(#2D3133, #2D3133);
-  background-repeat: no-repeat;
-  border-radius: var(--pill);
-  cursor: pointer;
-}
-
-
-#seekbar::-webkit-slider-thumb {
-  opacity: 0;
-}
-
-#seekbar:hover::-webkit-slider-thumb {
-  opacity: 1;
-}
-
-#seekbar::-webkit-slider-thumb {
-  -webkit-appearance: none;
-  width: 20px;
-  height: 10px;
-  border-radius: var(--pill);
-  cursor: pointer;
-  opacity: 0;
-  transition: all .3s linear;
-  background-color: var(--seekbar-fg);
-}
-
-#seekbar::-webkit-slider-thumb:hover {
-  background-color: var(--seekbar-fg);
-}
-
-#seekbar:hover::-webkit-slider-thumb {
-  opacity: 1;
+    &:hover::-webkit-slider-thumb {
+      opacity: 1;
+    }
+  }
 }
