--- a/src/css/list.css
+++ b/src/css/list.css
@@ -11,6 +11,15 @@
   border-radius: var(--rounding);
   padding: 8px;
   width: 300px;
+  transition: all .1s ease;
+
+  &:hover {
+    scale: 1.1;
+  }
+
+  &:active {
+    scale: 1;
+  }
 
   :is(img) {
     width: 100px;
