--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -3,8 +3,6 @@
 @tailwind utilities;
 
 :root {
-  --track-fg: #D7D3CE;
-  --track-fg-2: #94919E;
   --track-bg: #0D1117;
   --rounding: 9px;
   --pill: 99999999px;
@@ -40,20 +38,24 @@
   }
 }
 
-
-/* Set the width and color of the scrollbar track */
 ::-webkit-scrollbar {
   width: 6px;
   background-color: var(--track-bg);
 }
 
-/* Set the color of the scrollbar thumb (the draggable part) */
 ::-webkit-scrollbar-thumb {
   background-color: #333;
   border-radius: 5px;
 }
 
-/* Set the color of the scrollbar thumb on hover */
 ::-webkit-scrollbar-thumb:hover {
   background-color: #444;
+}
+
+.track-card {
+  cursor: pointer;
+
+  >* {
+    cursor: default;
+  }
 }
