--- a/src/output.css
+++ b/src/output.css
@@ -614,6 +614,10 @@ video {
   width: 4rem;
 }
 
+.w-32 {
+  width: 8rem;
+}
+
 .w-40 {
   width: 10rem;
 }
@@ -626,32 +630,8 @@ video {
   width: 1.5rem;
 }
 
-.w-72 {
-  width: 18rem;
-}
-
 .w-full {
   width: 100%;
-}
-
-.w-10 {
-  width: 2.5rem;
-}
-
-.w-20 {
-  width: 5rem;
-}
-
-.w-24 {
-  width: 6rem;
-}
-
-.w-32 {
-  width: 8rem;
-}
-
-.cursor-default {
-  cursor: default;
 }
 
 .cursor-pointer {
@@ -694,6 +674,10 @@ video {
 
 .border {
   border-width: 1px;
+}
+
+.border-2 {
+  border-width: 2px;
 }
 
 .border-b-2 {
@@ -766,16 +750,26 @@ video {
   padding-bottom: 0.75rem;
 }
 
+.py-1 {
+  padding-top: 0.25rem;
+  padding-bottom: 0.25rem;
+}
+
+.py-\[6px\] {
+  padding-top: 6px;
+  padding-bottom: 6px;
+}
+
 .pb-40 {
   padding-bottom: 10rem;
 }
 
-.pl-6 {
-  padding-left: 1.5rem;
-}
-
 .pl-2 {
   padding-left: 0.5rem;
+}
+
+.text-\[20px\] {
+  font-size: 20px;
 }
 
 .text-lg {
@@ -786,10 +780,6 @@ video {
 .text-sm {
   font-size: 0.875rem;
   line-height: 1.25rem;
-}
-
-.text-\[20px\] {
-  font-size: 20px;
 }
 
 .font-semibold {
@@ -817,8 +807,6 @@ video {
 }
 
 :root {
-  --track-fg: #D7D3CE;
-  --track-fg-2: #94919E;
   --track-bg: #0D1117;
   --rounding: 9px;
   --pill: 99999999px;
@@ -855,24 +843,25 @@ video {
   }
 }
 
-/* Set the width and color of the scrollbar track */
-
 ::-webkit-scrollbar {
   width: 6px;
   background-color: var(--track-bg);
 }
-
-/* Set the color of the scrollbar thumb (the draggable part) */
 
 ::-webkit-scrollbar-thumb {
   background-color: #333;
   border-radius: 5px;
 }
 
-/* Set the color of the scrollbar thumb on hover */
-
 ::-webkit-scrollbar-thumb:hover {
   background-color: #444;
+}
+
+.track-card {
+  cursor: pointer;
+  >* {
+    cursor: default;
+  }
 }
 
 .hover\:-translate-y-2:hover {
@@ -891,9 +880,67 @@ video {
   border-color: rgb(255 99 78 / var(--tw-border-opacity));
 }
 
+.focus\:hidden:focus {
+  display: none;
+}
+
+.focus\:scale-0:focus {
+  --tw-scale-x: 0;
+  --tw-scale-y: 0;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.focus\:border-2:focus {
+  border-width: 2px;
+}
+
+.focus\:border:focus {
+  border-width: 1px;
+}
+
+.focus\:border-b-2:focus {
+  border-bottom-width: 2px;
+}
+
+.focus\:border-red:focus {
+  --tw-border-opacity: 1;
+  border-color: rgb(221 61 44 / var(--tw-border-opacity));
+}
+
+.focus\:border-b-red:focus {
+  --tw-border-opacity: 1;
+  border-bottom-color: rgb(221 61 44 / var(--tw-border-opacity));
+}
+
+.focus\:bg-red:focus {
+  --tw-bg-opacity: 1;
+  background-color: rgb(221 61 44 / var(--tw-bg-opacity));
+}
+
+.focus\:bg-body:focus {
+  --tw-bg-opacity: 1;
+  background-color: rgb(13 17 23 / var(--tw-bg-opacity));
+}
+
+.focus\:underline:focus {
+  text-decoration-line: underline;
+}
+
 .focus\:outline-none:focus {
   outline: 2px solid transparent;
   outline-offset: 2px;
+}
+
+.focus\:outline:focus {
+  outline-style: solid;
+}
+
+.focus\:outline-2:focus {
+  outline-width: 2px;
+}
+
+.focus\:outline-red:focus {
+  outline-color: #DD3D2C;
 }
 
 .active\:translate-y-0:active {
@@ -946,12 +993,12 @@ video {
     padding-bottom: 7rem;
   }
 
-  .sm\:pt-\[6\.5rem\] {
-    padding-top: 6.5rem;
-  }
-
   .sm\:pl-6 {
     padding-left: 1.5rem;
+  }
+
+  .sm\:pt-\[6\.5rem\] {
+    padding-top: 6.5rem;
   }
 }
 
