--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -17,25 +17,25 @@
   background-size: 0% 100%;
   background-image: linear-gradient(var(--seekbar-fg), var(--seekbar-fg));
   background-repeat: no-repeat;
+}
 
-  &::-webkit-slider-thumb {
-    appearance: none;
-    opacity: 0;
-    width: 20px;
-    height: 10px;
-    border-radius: var(--pill);
-    cursor: pointer;
-    transition: all .3s linear;
-    background-color: var(--seekbar-fg);
+#seekbar::-webkit-slider-thumb {
+  appearance: none;
+  opacity: 0;
+  width: 20px;
+  height: 10px;
+  border-radius: var(--pill);
+  cursor: pointer;
+  transition: all .3s linear;
+  background-color: var(--seekbar-fg);
+}
 
-    &:hover {
-      background-color: var(--seekbar-fg);
-    }
-  }
+#seekbar:hover::-webkit-slider-thumb {
+  background-color: var(--seekbar-fg);
+}
 
-  &:hover::-webkit-slider-thumb {
-    opacity: 1;
-  }
+#seekbar :hover::-webkit-slider-thumb {
+  opacity: 1;
 }
 
 ::-webkit-scrollbar {
@@ -54,8 +54,17 @@
 
 .track-card {
   cursor: pointer;
+}
 
-  >* {
-    cursor: default;
-  }
+.track-card>* {
+  cursor: default;
+}
+
+#btn-next.material-symbols-outlined {
+  font-size: 24px;
+  font-variation-settings:
+    'FILL' 0,
+    'wght' 500,
+    'GRAD' 0,
+    'opsz' 28
 }
